--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES5",
     "allowJs": true,
-    "outDir": "dist"
+    "outDir": "dist",
   },
   "include": [
     "src",
