--- a/back/package.json
+++ b/back/package.json
@@ -11,15 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-jwt": "^6.0.1",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/multer": "^1.4.5",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "typescript": "^4.2.4"
   }
